--- a/templates/index.html
+++ b/templates/index.html
@@ -1,13 +1,9 @@
-{% extends 'base.html'%}
-
-{% block content %}
+{% extends 'base.html' %} {% block content %}
     <h1>{% block title %} Welcome to FlaskBlog {% endblock %}</h1>
-     {% for post in posts %}
-         <a href=" {" >
-    <a href="{{ url_for('post', post_id=post['id']) }}">
-        <h2>{{ post['title'] }}</h2>
-    </a>
-    <span class="badge badge-primary">{{ post['created'] }}</span>
-    <hr>
-{% endfor %}
-{% endblock %}
+    {% for post in posts %}
+        <a href=" {{ url_for('post', post_id=post['id']) }} ">
+            <h2>{{ post['title'] }}</h2>
+        </a>
+        <span class="badge badge-primary">{{ post['created'] }}</span>
+        <hr>
+{% endfor %} {% endblock %}
