--- a/templates/index.html
+++ b/templates/index.html
@@ -20,7 +20,7 @@
       <!-- Posts -->
       <div class="col-md-6 col-lg-4">
         <div class="card h-100 text-bg-dark border-0">
-          <img src="{{ post['image_url'] or url_for('static', filename='img/post.jpg') }}" class="card-img-top" alt="Post image">
+          <img src="{{ post['image_url'] or url_for('static', filename='img/post.jpg') }}" class="card-img-top" alt="Post">
           <div class="card-body">
             <h3 class="h5 card-title">{{ post['title'] }}</h3>
             <p class="card-text small text-body-secondary">
