--- a/templates/post.html
+++ b/templates/post.html
@@ -9,7 +9,7 @@
        <img src="{{ post.image_url or url_for('static', filename='img/post.jpg') }}" 
         class="img-fluid rounded mx-auto d-block mb-4" 
         style="max-width: 750px; max-height: 500px; object-fit: cover;"; 
-        alt="Post image">
+        alt="Post">
         <div class="card-body">
           <h1 class="h3 fw-bold mb-2">{{ post.title }}</h1>
           <div class="mb-3 text-muted small">
