--- a/templates/search.html
+++ b/templates/search.html
@@ -12,7 +12,7 @@
       {% for post in posts %}
       <div class="col-md-6 col-lg-4">
         <div class="card h-100 text-bg-dark border-0">
-          <img src="{{ post.image_url or url_for('static', filename='img/post.jpg') }}" class="card-img-top" alt="Post image">
+          <img src="{{ post.image_url or url_for('static', filename='img/post.jpg') }}" class="card-img-top" alt="Post">
           <div class="card-body">
             <h3 class="h5 card-title">
               <a href="{{ url_for('post', post_id=post.id) }}" class="text-white text-decoration-none">
