--- a/templates/create.html
+++ b/templates/create.html
@@ -19,7 +19,7 @@
               required>
           </div>
           <div class="form-group mb-4">
-            <label class="form-label fw-semibold">Content</label>
+            <label for="content" class="form-label fw-semibold">Content</label>
             <!-- Trix Editor for WYSIWYG content -->
             <input id="content" type="hidden" name="content" value="{{ request.form.get('content', '') | e }}">
             <trix-editor input="content" class="bg-white"></trix-editor>
